[project]
name = "echo"
description = "Callback Properties in Python"
readme = "README.rst"
license = "MIT"
maintainers = [ { name = "Chris Beaumont and Thomas Robitaille", email = "thomas.robitaille@gmail.com" } ]
authors = [ { name = "Chris Beaumont and Thomas Robitaille", email = "thomas.robitaille@gmail.com" } ]
requires-python = ">=3.10"
classifiers = [
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = [ "version" ]
dependencies = [
  "numpy",
]

[tool.setuptools_scm]

[project.optional-dependencies]
docs = [
  "numpydoc",
  "sphinx",
  "sphinx-automodapi",
  "sphinx-rtd-theme",
]
qt = [
  "pyqt5>=5.14",
  "qtpy",
]
test = [
  "pytest",
  "pytest-cov",
]

[project.urls]
homepage = "https://github.com/glue-viz/echo"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=61.2",
  "setuptools-scm",
]

[tool.setuptools]
zip-safe = true
include-package-data = false

[tool.setuptools.packages]
find = { namespaces = false }
