[metadata]
name = echo
url = https://github.com/glue-viz/echo
author = Chris Beaumont
author_email = cbeaumont@cfa.harvard.edu
maintainer = Chris Beaumont
maintainer_email = cbeaumont@cfa.harvard.edu
classifiers =
	Development Status :: 4 - Beta
	Environment :: Console
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Natural Language :: English
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Operating System :: OS Independent
	Topic :: Utilities
license = MIT
description = Callback Properties in Python
long_description = file: README.rst

[options]
zip_safe = True
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
	numpy
	qtpy

[options.extras_require]
test =
    pytest
	pytest-cov
docs =
    sphinx
    sphinx-automodapi
    numpydoc
    sphinx-rtd-theme
qt =
    PyQt5>=5.9
