[metadata]
name = echo
url = https://github.com/glue-viz/echo
author = Chris Beaumont and Thomas Robitaille
author_email = thomas.robitaille@gmail.com
maintainer = Chris Beaumont and Thomas Robitaille
maintainer_email = thomas.robitaille@gmail.com
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
    Topic :: Utilities
license = MIT
description = Callback Properties in Python
long_description = file: README.rst

[options]
zip_safe = True
packages = find:
python_requires = >=3.8
setup_requires = setuptools_scm
install_requires =
    numpy
    qtpy
    importlib_metadata; python_version<'3.9'

[options.extras_require]
test =
    pytest
    pytest-cov
docs =
    sphinx
    sphinx-automodapi
    numpydoc
    sphinx-rtd-theme
qt =
    PyQt5>=5.14
